--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
 <p> Et voici un autre paragraphe </p> 
 </body> 
 </html>
+<img src= "https://res.cloudinary.com/wildcodeschool/image/upload/c_fill,h_50/v1/static/irjoy97aq0eol8bf6959">
+<a href= "https://odyssey.wildcodeschool.com/"> Odyssey </a>
